# rollercoster_tycoon

./: .gitignore  CMakeLists.txt  README.md  index.js  index.wasm
.github/workflows/: deploy.yml
reference/: GEMINI.md  book.md
src/: main.cpp
src/common/: Fixed.hpp  SoundManager.hpp  Vector2.hpp
src/game/: Economy.hpp  Entity.hpp  EntityManager.hpp  Guest.cpp  Guest.hpp  Pathfinder.cpp  Pathfinder.hpp  RideStats.hpp  Scenario.hpp  Tile.hpp  Track.cpp  Track.hpp  Train.cpp  Train.hpp  World.cpp  World.hpp
src/render/: Camera.hpp  Renderer.cpp  Renderer.hpp  Sprite.hpp  UI.cpp  UI.hpp
